# dashboard-fastapi

./: mkdocs.yml  pyproject.toml
api/: Dockerfile  main.py  requirements.txt
api/models/: response_models.py
api/utils/: services.py
app/: Dockerfile  dashboard.py
docs/: openapi.json
